--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
             </div>
             <div class="card">
                 <a href="html/Study-13.html" class="link">
-                    <div class="link-title">ThreeJS魅力时刻!</div>
-                    <div class="link-description">因为不会,所以这个是CV大法过来的 (</div>
+                    <div class="link-title">正方体(ThreeJS)</div>
+                    <div class="link-description">因为不会,所以这个是CV大法过来的😭</div>
                 </a>
             </div>
             <div class="card">
