--- a/html/Study-13.html
+++ b/html/Study-13.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cube</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Interactive 3D Cube</title>
     <style>
-        body { margin: 0; overflow: hidden; }
-        canvas { display: block; }
+        body { 
+            margin: 0; 
+            overflow: hidden; 
+            touch-action: none;
+        }
+        canvas { 
+            display: block; 
+        }
     </style>
 </head>
 <body>
@@ -16,6 +22,7 @@
         let scene, camera, renderer, cube, pointLight;
         let isDragging = false;
         let previousMousePosition = { x: 0, y: 0 };
+        let previousTouchPosition = { x: 0, y: 0 };
 
         const params = {
             rotationSpeed: 0.01,
@@ -48,10 +55,17 @@
 
             camera.position.z = 5;
 
+            // Mouse events
             renderer.domElement.addEventListener('mousedown', onMouseDown);
             renderer.domElement.addEventListener('mousemove', onMouseMove);
             renderer.domElement.addEventListener('mouseup', onMouseUp);
             renderer.domElement.addEventListener('wheel', onMouseWheel);
+
+            // Touch events
+            renderer.domElement.addEventListener('touchstart', onTouchStart);
+            renderer.domElement.addEventListener('touchmove', onTouchMove);
+            renderer.domElement.addEventListener('touchend', onTouchEnd);
+
             window.addEventListener('resize', onWindowResize);
 
             const gui = new dat.GUI();
@@ -61,6 +75,11 @@
             gui.add(params, 'lightIntensity', 0, 2).onChange(updateLightIntensity);
             gui.addColor(params, 'lightColor').onChange(updateLightColor);
             gui.add(params, 'cubeSize', 0.1, 3).onChange(updateCubeSize);
+
+            // Adjust GUI position for mobile
+            gui.domElement.style.position = 'absolute';
+            gui.domElement.style.top = '10px';
+            gui.domElement.style.right = '10px';
 
             animate();
         }
@@ -123,8 +142,7 @@
                     y: event.offsetY - previousMousePosition.y
                 };
 
-                cube.rotation.y += deltaMove.x * 0.01;
-                cube.rotation.x += deltaMove.y * 0.01;
+                rotateCube(deltaMove.x, deltaMove.y);
             }
 
             previousMousePosition = {
@@ -139,6 +157,60 @@
 
         function onMouseWheel(event) {
             camera.position.z += event.deltaY * 0.01;
+        }
+
+        function onTouchStart(event) {
+            event.preventDefault();
+            isDragging = true;
+            previousTouchPosition = {
+                x: event.touches[0].clientX,
+                y: event.touches[0].clientY
+            };
+        }
+
+        function onTouchMove(event) {
+            event.preventDefault();
+            if (isDragging) {
+                if (event.touches.length === 1) {
+                    // Single touch: rotate
+                    const deltaMove = {
+                        x: event.touches[0].clientX - previousTouchPosition.x,
+                        y: event.touches[0].clientY - previousTouchPosition.y
+                    };
+
+                    rotateCube(deltaMove.x, deltaMove.y);
+
+                    previousTouchPosition = {
+                        x: event.touches[0].clientX,
+                        y: event.touches[0].clientY
+                    };
+                } else if (event.touches.length === 2) {
+                    // Pinch to zoom
+                    const touch1 = event.touches[0];
+                    const touch2 = event.touches[1];
+                    const dist = Math.hypot(
+                        touch1.clientX - touch2.clientX,
+                        touch1.clientY - touch2.clientY
+                    );
+
+                    if (this.previousPinchDistance) {
+                        const delta = this.previousPinchDistance - dist;
+                        camera.position.z += delta * 0.01;
+                    }
+
+                    this.previousPinchDistance = dist;
+                }
+            }
+        }
+
+        function onTouchEnd(event) {
+            isDragging = false;
+            this.previousPinchDistance = null;
+        }
+
+        function rotateCube(deltaX, deltaY) {
+            cube.rotation.y += deltaX * 0.01;
+            cube.rotation.x += deltaY * 0.01;
         }
 
         function onWindowResize() {
