--- a/html/Study-13.html
+++ b/html/Study-13.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Interactive 3D Cube</title>
+    <title>3D Cube</title>
     <style>
         body { 
             margin: 0; 
