更新 Study-14.html

--- a/html/Study-14.html
+++ b/html/Study-14.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hypercube (Tesseract) Animation</title>
+    <title>Mandelbulb</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
