add new Cude ThreeJS

--- a/index.html
+++ b/index.html
@@ -281,6 +281,12 @@
                     <div class="link-description">鼠标滚轮可以缩放查看,右上角控制面板</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-15.html" class="link">
+                    <div class="link-title">超立方体(ThreeJS四维动画)</div>
+                    <div class="link-description">在旋转基础上进行更改</div>
+                </a>
+            </div>
         </div>
     </div>
 
