add cube control

--- a/index.html
+++ b/index.html
@@ -287,6 +287,14 @@
                     <div class="link-description">在旋转基础上进行更改</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-16.html" class="link">
+                    <div class="link-title">方块移动控制(ThreeJS)</div>
+                    <div class="link-description">电脑端可以使用方向键进行控制</div>
+                    <div class="link-description">手机端可以通过按键进行控制</div>
+                </a>
+            </div>
+            
         </div>
     </div>
 
