--- a/html/Study-15.html
+++ b/html/Study-15.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Cube</title>
     <style>
-        body { margin: 0; }
-        canvas { display: block; }
+        body {
+            margin: 0;
+        }
+
+        canvas {
+            display: block;
+        }
+
         #control-panel {
             position: absolute;
             top: 10px;
@@ -16,6 +23,7 @@
         }
     </style>
 </head>
+
 <body>
     <div id="control-panel">
         <label for="speed">Animation Speed:</label>
@@ -96,4 +104,5 @@
         animate();
     </script>
 </body>
+
 </html>
