index.html change

--- a/index.html
+++ b/index.html
@@ -294,6 +294,13 @@
                     <div class="link-description">手机端可以通过按键进行控制</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-17.html" class="link">
+                    <div class="link-title">Index.html(新草案)</div>
+                    <div class="link-description">闲着没事写了个新的Index</div>
+                    <div class="link-description">相比于现在的Index你觉得哪个好?</div>
+                </a>
+            </div>
             
         </div>
     </div>
