--- a/index.html
+++ b/index.html
@@ -301,6 +301,13 @@
                     <div class="link-description">相比于现在的Index你觉得哪个好?</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/递归算法.html" class="link">
+                    <div class="link-title">递归算法迷宫</div>
+                    <div class="link-description">每次生成的迷宫都是随机样式</div>
+                    <div class="link-description">拥有先进的自动寻找出口功能（</div>
+                </a>
+            </div>
             
         </div>
     </div>
