--- a/index.html
+++ b/index.html
@@ -308,6 +308,12 @@
                     <div class="link-description">拥有先进的自动寻找出口功能（</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Blog/Blog.html" class="link">
+                    <div class="link-title">博客test</div>
+                    <div class="link-description">Blogs-TYX_CnJiu</div>
+                </a>
+            </div>
             
         </div>
     </div>
