--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
             </div>
             <div class="card">
                 <a href="html/Blog/Blog.html" class="link">
-                    <div class="link-title">博客test</div>
-                    <div class="link-description">Blogs-TYX_CnJiu</div>
+                    <div class="link-title">News Web</div>
+                    <div class="link-description">News-TYX_CnJiu</div>
                 </a>
             </div>
             
